--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </nav>
      </div>
      <p class="intro-text">
-
+      intro text
      </p>
      <div id="carouselExampleIndicators" class="carousel slide center pt-5" data-ride="carousel">
        <ol class="carousel-indicators">
