--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,10 @@
         </nav>
        </div>
      </div>
+     <div class="contact-jumbo mt-4 p-5 text-white rounded">
+  <h1>Jumbotron Example</h1>
+  <p>Lorem ipsum...</p>
+</div>
      <footer class="footer mt-4 text-center">
        <div class="social">
        <p class="pt-2">Our media:</p>
