--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </div>
     <br>
     <p class="intro-text text-center">
-      intro text
+      ufgiudfuguhguhugodugodfuhodguhfduvjoivguuvfdougu
     </p>
     <div id="carouselExampleIndicators" class="carousel slide center pt-5" data-ride="carousel">
       <ol class="carousel-indicators">
