--- a/ourteam.html
+++ b/ourteam.html
@@ -17,9 +17,12 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="" alt="" width="75" height="35" class="d-inline-block align-text-top" />
+          <img src="Capture.PNG" alt="" width="75" height="35" class="d-inline-block align-text-top" />
           <b id="title_message" class="titleplease">Katie Comets</b>
         </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item ml-2">
@@ -45,41 +48,54 @@
       <div class="coaches col-6">
         <h1>Coaches</h1>
         <center>
-        <div class="col-md-3 text-center">
+        <div class="center text-center">
+          <center>
           <div class="card" style="width: 18rem;">
             <img class="card-img-top" src="..." alt="Card image cap">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
           </div>
+          </center>
         </div>
-        <div class="col-md-3 text-center">
+        <div class="center text-center">
+          <center>
           <div class="card" style="width: 18rem;">
             <img class="card-img-top" src="..." alt="Card image cap">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
           </div>
+          </center>
         </div>
-        <div class="col-md-3 text-center">
+        <div class="center text-center">
+          <center>
           <div class="card" style="width: 18rem;">
             <img class="card-img-top" src="..." alt="Card image cap">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
           </div>
+          </center>
         </div>
         </center>
       </div>
       <div class="players col-6">
         <h1>Players</h1>
-        <ul>
-          <li>Ben</li>
-          <li>Barry</li>
-          <li>Raiden</li>
-          <li>Billy</li>
-          <li>Armstrong</li>
-        </ul>
+        <table class="table">
+          <thead class="thead-dark">
+            <tr class = "tabletop">
+              <th>Players</th>
+            </tr>
+          </thead>
+          <tbody>
+              <tr><td><center>Billy</center></td></tr>
+              <tr><td><center>Barry</center></td></tr>
+              <tr><td><center>Raiden</center></td></tr>
+              <tr><td><center>Armstrong</center></td></tr>
+              <tr><td><center>RiskOfRain</center></td></tr>
+            </tbody>
+        </table>
       </div>
     </div>
     <footer class="footer mt-4 text-center">
