--- a/index.html
+++ b/index.html
@@ -48,19 +48,31 @@
   </div>
   <br>
   <center>
-  <div class="intro-text">
-    <b>
-      <p class="text-center">
-        Katie's Komets is a co-ed wheelchair basketball team for kids with physical disabilities. The organization is for kids in elementary school through high school graduation. The program does not require that a child be a full-time wheelchair
-        user or even own a wheelchair. All that is necessary is that the child has a long-term physical limitation that prevents him or her from participating in a regular basketball program and is able to operate a manual wheelchair.
-      </p>
-      <p>The team is a member of the National Wheelchair Basketball Association. We practice at the Carousel House in Philadelphia's Fairmount Park once a week on Saturdays. Our games are at travel locations. Katie's Komets has traveled Virginia, New
-        Jersey, New York, Maryland, Alabama, and more. Katie's Komets has also traveled to nationals in Louisville, Kentucky and in April 2014 placed 22nd in the nation and in 2015 Katie's Komets placed 5th in the national NIT division. Katie's
-        Komets also hosts a regional tournament in Philadelphia every January with numerous teams attending from as far away as Florida and Indiana.
-      </p>
-    </b>
-  </div>
+    <div class="row">
+      <div class="col-md-7">
+        <div class="intro-text">
+          <b>
+            <p class="text-center">
+              Katie's Komets is a co-ed wheelchair basketball team for kids with physical disabilities. The organization is for kids in elementary school through high school graduation. The program does not require that a child be a full-time wheelchair
+              user or even own a wheelchair. All that is necessary is that the child has a long-term physical limitation that prevents him or her from participating in a regular basketball program and is able to operate a manual wheelchair.
+            </p>
+            <p>The team is a member of the National Wheelchair Basketball Association. We practice at the Carousel House in Philadelphia's Fairmount Park once a week on Saturdays. Our games are at travel locations. Katie's Komets has traveled Virginia, New
+              Jersey, New York, Maryland, Alabama, and more. Katie's Komets has also traveled to nationals in Louisville, Kentucky and in April 2014 placed 22nd in the nation and in 2015 Katie's Komets placed 5th in the national NIT division. Katie's
+              Komets also hosts a regional tournament in Philadelphia every January with numerous teams attending from as far away as Florida and Indiana.
+            </p>
+          </b>
+        </div>
+      </div>
+      <div class="col-md-5">
+        <img class="splashImage" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQL_HwCwkPrAGm-lVH0WXTN5wqVT7VodDFNjA&usqp=CAU" alt="">
+      </div>
+</div>
 </center>
+<br>
+<br>
+<br>
+<hr>
+<br>
   <div id="carouselExampleIndicators" class="carousel slide center pt-5" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -88,15 +100,26 @@
     </a>
   </div>
   <footer class="footer mt-4 text-center">
-    <div class="social">
-      <p class="pt-2">Our media:</p>
-      <img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/04/Facebook_f_logo_%282021%29.svg/1200px-Facebook_f_logo_%282021%29.svg.png" alt="">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="social">
+          <p class="pt-2">Our media:</p>
+          <img src="http://assets.stickpng.com/images/580b57fcd9996e24bc43c521.png" alt="">
+          <img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/04/Facebook_f_logo_%282021%29.svg/1200px-Facebook_f_logo_%282021%29.svg.png" alt="">
+        </div>
+      </div>
+      <div class="col-md-4"><p class="mt-2">Our Sponsors:
+        <br>
+        <img class="sponsors" id="" src="https://www.katieskomets.org/images/carousel.gif">
+        <img class="sponsors" src="https://www.katieskomets.org/images/katiekirlin.jpg">
+      </p></div>
+      <div class="col-md-4">
+        <h4>Contacts:</h4>
+        <h5>Address: 372 btnjdevils drive</h3>
+        <h5>Phone Number: +1 (732) 609-3282</h4>
+        <h5>Email: example@gmail.con</h5>
+      </div>
     </div>
-    <p class="mt-2">Our Sponsors:
-      <br>
-      <img class="sponsors" id="" src="https://www.katieskomets.org/images/carousel.gif">
-      <img class="sponsors" src="https://www.katieskomets.org/images/katiekirlin.jpg">
-    </p>
     <br>
     <p>© 2012 - 2015 Katie's Komets and the Katie Kirlin Fund. All Rights Reserved.</p>
   </footer>
