--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
       </div>
     </nav>
   </div>
-  <div class="index-jumbotron mt-4 p-5 bg-primary text-white rounded">
+  <div class="index-jumbotron mt-4 p-5 text-white rounded">
+    <br>
     <br>
     <br>
     <br>
