--- a/ourteam.html
+++ b/ourteam.html
@@ -98,52 +98,52 @@
           <tbody>
             <tr>
               <td>
-                <center>Billy</center>
+                <center>Player 1</center>
               </td>
             </tr>
             <tr>
               <td>
-                <center>Barry</center>
+                <center>Player 2</center>
               </td>
             </tr>
             <tr>
               <td>
-                <center>Raiden</center>
+                <center>Player 3</center>
               </td>
             </tr>
             <tr>
               <td>
-                <center>Armstrong</center>
+                <center>Player 4</center>
               </td>
             </tr>
             <tr>
               <td>
-                <center>RiskOfRain</center>
+                <center>Player 5</center>
               </td>
             </tr>
             <tr>
               <td>
-                <center>that time i got reincarnated as a slime</center>
+                <center>Player 6</center>
               </td>
             </tr>
             <tr>
               <td>
-                <center>Billy</center>
+                <center>Player 7</center>
               </td>
             </tr>
             <tr>
               <td>
-                <center>Billy</center>
+                <center>Player 8</center>
               </td>
             </tr>
             <tr>
               <td>
-                <center>Billy</center>
+                <center>Player 9</center>
               </td>
             </tr>
             <tr>
               <td>
-                <center>Billy</center>
+                <center>Player 10</center>
               </td>
             </tr>
           </tbody>
