--- a/schedule.html
+++ b/schedule.html
@@ -41,7 +41,7 @@
       </nav>
     </div>
     <br>
-    <div class="ourteam-jumbo mt-4 p-5 text-white">
+    <div class="schedule-jumbo mt-4 p-5 text-white">
       <br>
       <br>
       <br>
